compiler-core/src/go/tests/snapshots/gleam_core__go__tests__assignments__assert.snap
---
source: compiler-core/src/go/tests/assignments.rs
expression: "fn go(x) { let assert 1 = x }"
snapshot_kind: text
---
----- SOURCE CODE
fn go(x) { let assert 1 = x }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.Int_t) gleam_P.Int_t {
  if gleam_P.Bool_t(!x.Equal(1)) {
    panic(gleam_P.MakeError(
      "let_assert",
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      map[string]any{"value": x },
    ))
  }
  return x
}
