compiler-core/src/go/tests/snapshots/gleam_core__go__tests__assignments__rebound_argument.snap
---
source: compiler-core/src/go/tests/assignments.rs
expression: "pub fn main(x) {\n  let x = False\n  x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(x) {
  let x = False
  x
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[I gleam_P.Type[I]](x I) gleam_P.Bool_t {
  var xʹ1 gleam_P.Bool_t = false
  _ = xʹ1
  return xʹ1
}
